--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "corneltek/universal",
-    "homepage": "http://github.com/corneltek/Universal",
+    "name": "universal/universal",
+    "homepage": "http://github.com/c9s/universal",
     "description": "Universal library for PHP",
     "require": {
         "php": ">=5.3.0"
@@ -15,8 +15,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "Universal\\": "src/Universal/"
+            "Universal\\": "src/"
         }
     },
-    "extra": { "branch-alias": { "dev-master": "1.8.x-dev" } }
+    "extra": { "branch-alias": { "dev-master": "2.0.x-dev" } }
 }
