--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,9 @@
     "homepage": "http://github.com/c9s/universal",
     "description": "Universal library for PHP",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.4.0"
     },
-    "require-dev": {
-        "corneltek/phpunit-testmore": "dev-master"
-    },
+    "require-dev": { },
     "license": "MIT",
     "authors": [
         { "name": "Yo-An Lin", "email": "yoanlin93@gmail.com" }
