--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ php:
 - 5.6
 - 7.0
 - 7.1
+- hhvm
 install:
 - travis_retry composer require satooshi/php-coveralls "^1" --no-update --dev
 - travis_retry composer install
