--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: php
+services:
+- memcached
+- mongodb
 php:
 - 5.6
 - 7.0
 - 7.1
 - hhvm
+matrix:
+  fast_finish: true
+  allow_failures:
+  - php: hhvm
 install:
 - travis_retry composer require satooshi/php-coveralls "^1" --no-update --dev
 - travis_retry composer install
