--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,17 +8,21 @@
          stopOnFailure="false"
          verbose="true">
 
-  <filter>
-    <whitelist>
-        <directory suffix=".php">src/</directory>
-    </whitelist>
-  </filter>
 
   <testsuites>
     <testsuite name="Universal">
-      <directory suffix="Test.php">tests</directory>
+      <directory suffix="Test.php">src</directory>
     </testsuite>
   </testsuites>
+
+  <filter>
+    <whitelist>
+      <directory suffix=".php">src</directory>
+      <exclude>
+        <directory suffix="Test.php">src</directory>
+      </exclude>
+    </whitelist>
+  </filter>
 
   <logging>
 
