--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
     "require": {
         "php": ">=5.4.0"
     },
+    "conflict": {
+        "corneltek/universal": "*"
+    },
     "require-dev": { },
     "license": "MIT",
     "authors": [
