--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=5.4.0"
     },
-    "conflict": {
+    "replace": {
         "corneltek/universal": "*"
     },
     "require-dev": { },
